# capstone

./: .env.example  .gitignore  HOW_TO_USE.md  Process_Optimization.ipynb  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202604220001_initial.py
backend/app/: __init__.py  main.py  worker.py
backend/app/alerts/: __init__.py  engine.py  rules.py
backend/app/analytics/: __init__.py  ergonomics.py  muda.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  alerts.py  analytics.py  auth.py  monitor.py  sessions.py  sops.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  action.py  alert.py  audit.py  mixins.py  session.py  sop.py  user.py
backend/app/privacy/: __init__.py  face_blur.py
backend/app/schemas/: __init__.py  action.py  alert.py  auth.py  session.py  sop.py
backend/app/scripts/: seed_demo.py
backend/app/sop/: __init__.py  comparator.py  generator.py  llm.py
backend/app/streaming/: __init__.py  rtsp_reader.py
backend/app/vision/: __init__.py  action_recognition.py  heatmap.py  pipeline.py  pose_estimation.py  temporal_analysis.py  types.py
backend/tests/: conftest.py  test_alert_rules.py  test_comparator.py  test_ergonomics.py  test_llm_stub.py  test_muda.py  test_sop_generator.py  test_temporal_analysis.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+39 files in other folders)
