[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-sop-backend"
version = "0.1.0"
description = "VISION-SOP: computer-vision SOP automation for manufacturing."
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = [
  "E501",  # handled by formatter
  "B008",  # FastAPI Depends() in defaults is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
  "app/main.py",
  "app/worker.py",
  "app/scripts/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
